[project]
name = "blog-geo-spatial-data-in-databricks"
version = "0.1.0"
description = "Blog series: working with geo-spatial data in Databricks"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.4",
    "matplotlib>=3.9",
    "pyarrow>=24.0.0",
    "ruff>=0.9",
    "databricks-connect==17.3.1",
    "folium==0.20.0",
    "pygeohash[viz]==3.3.0",
    "keplergl>=0.3.2",
    "setuptools<82.0.0"
]
